# ApTrader

./: .gitignore  .python-version  CLAUDE.md  README.md  __init__.py  benchmark_analytical.py  benchmark_clients.py  config.toml  main.py  pyproject.toml  requirements.txt  run_tests.py  setup-bmad.sh  test_spark_etl_simple.py  test_ticker_only_feature.py
bulk_downloader/: polygon_s3.py
clients/: __init__.py  duckdb_stock_client.py  exceptions.py  query_builder.py  s3_stock_client.py
data_handler/: base_data_handler.py
docs/.bmad-session/: current-state.md
etl/: __init__.py  local_csv_to_arrow_fs.py  local_csv_to_s3.py  polygon_csv_s3_to_local.py  polygon_s3.py  s3_csv_to_s3_parquet_glue_shell_job.py  s3_csv_to_s3_parquet_job.py  s3_csv_to_s3_parquet_spark_job.py  s3_to_parquet_glue_job.py  s3fs_client.py
lambdas/save_splits_to_s3_lambda/: lambda_function.py
lambdas/save_splits_to_s3_lambda/polygon_api_client-1.14.4.dist-info/: RECORD
notebooks/: converter.ipynb  data_explorer.ipynb  etl_test.ipynb  test_aapl_s3_client.ipynb
notebooks/.ipynb_checkpoints/: data_explorer-checkpoint.ipynb
shell_scripts/: README.md  deploy_glue_etl.sh
tests/: __init__.py  test_duckdb_stock_client.py  test_etl_package.py  test_s3_csv_to_s3_parquet_glue_shell_job.py  test_s3_csv_to_s3_parquet_spark_job.py  test_s3_stock_client.py
utils/: __init__.py  timing.py
